fix(ingestion): 兼容到期日时间戳，S0 提醒用 upcomingAmount 过守卫。
Co-authored-by: Cursor <cursoragent@cursor.com>